2020-12-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.8-alphha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha02: Reef Point Shrine';git push
	git tag -a 4.9.8-alpha02 -m '';git push --tags

	* S1D: Working through defining S1D variables in output file

	* NCO 4.9.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha01: Alleles';git push
	git tag -a 4.9.8-alpha01 -m 'Functionally identical to 4.9.7';git push --tags

2020-12-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7: Oculus';git push
	git tag -a 4.9.7 -m 'S1D progress, nvcc, Andes, Chrysalis, nco_flt_enm; ncks, ncap2 --ccr; ncremap nfr MPAS; ncclimo fix tpd bug, glb_avg wait()';git push --tags

	* BitGroom: revert quantizing two additional bits based on my tests

2020-12-23  Charlie Zender  <zender@uci.edu>

	* BitGroom: quantize two additional bits based on Juan's tests

	* S1D: Determine pft_nbr_out and clm_nbr_out based on generic tests

	* S1D: interrogate both ELM crop model history file and ELM/MALI history/restart files

2020-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7-alpha03: Bona';git push
	git tag -a 4.9.7-alpha03 -m 'nco_flt_enm; ncks, ncap2 --ccr; ncclimo/ncremap Chrysalis; ncremap nfr MPAS; ncclimo fix 4.9.6 tpd bug';git push --tags

	* Fix ncclimo date/time bug: %g not %f in tpd-inferral format yields tpd=10 not tpd=8 for 3-hourly EAM data

	* Add long_name attribute to grid_dims variable

	* nco_grd_nfr() implement Fortran-based vertex indexinng, validate MPAS grid inferral

2020-12-19  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() found error in MPAS restart for QU120_zach.nc

	* nco_grd_nfr() add logic to convey correct units (radians, m2)	for MPAS angles and area

2020-12-18  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() add logic to retrieve MPAS bounds-related variables from restart files
