@@ -1,8 +1,12 @@
-2020-12-28  Charlie Zender  <zender@uci.edu>
+2020-12-29    <zender@uci.edu>
 
-	* NCO 4.9.8-alphha02 release procedure:
+	* NCO 4.9.8-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha02: Reef Point Shrine';git push
 	git tag -a 4.9.8-alpha02 -m '';git push --tags
+
+	* S1D: Defined first column-packed variable in output file
+
+2020-12-28  Charlie Zender  <zender@uci.edu>
 
 	* S1D: Working through defining S1D variables in output file
 
